k8s/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-deployment
  namespace: todoapp
  labels:
    app: todoapp
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 3
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
        - name: todoapp
          image: orestprogrammer/aws-pet-project:sha-0245e01dc6654a0019e7eec5822b46e4bdf8fb9a
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: todoapp-storage
              mountPath: /app/data
            - name: todoapp-secret
              mountPath: /app/secrets
              readOnly: true
            - name: todoapp-config
              mountPath: /app/config
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: todoapp-storage
          persistentVolumeClaim:
            claimName: todoapp-pvc
        - name: todoapp-secret
          secret:
            secretName: todoapp-secret
        - name: todoapp-config
          configMap:
            name: todoapp-config
